# finance-tracker

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  __init__.py  buckets.py  cleanup_demos.py  config.py  create_user.py  csv_import.py  main.py  notifications.py  reporting.py  schemas.py  seed_demo.py  send_digests.py  snapshot_daily.py
backend/alembic/: env.py
backend/api/: accounts.py  alerts.py  allocations.py  attachments.py  auth.py  banks.py  budgets.py  cashflow.py  (+22 more)
config/: .gitkeep
docs/: GUIDE.md  plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
tests/: conftest.py  gocardless_fixtures.py  test_accounts_api.py  test_allocations_api.py  test_api.py  test_attachments_api.py  test_auth.py  test_bank_flow.py  test_banks_api.py  test_business_profile_api.py  test_cashflow.py  test_cashflow_api.py  test_cashflow_calendar.py  test_categorize.py  test_categorize_api.py  test_clients_api.py  test_config.py  test_debts_api.py  test_demo_api.py  test_emergency_fund_api.py  test_encryption.py  test_gocardless_client.py  test_insights.py  test_invoices_api.py  test_isolation.py  test_manual_connector.py  test_networth.py  test_planned_purchases_api.py  test_projects_api.py  test_reconcile_api.py  test_recurring_invoices_api.py  test_reports_api.py  test_tax_reserve_api.py  test_taxes_api.py  test_time_entries_api.py  test_transactions_edit_api.py  test_transactions_import_api.py  test_transfers_api.py
(+161 files in other folders)
